<resources>
    <string name="app_name">MyBroadcastReceiver</string>
    <string name="this_sms_receiver_app">Ini Aplikasi Sms Receiver</string>
    <string name="download_file">Download a File</string>
    <string name="coming_from">Coming From</string>
    <string name="this_play">Oii, main kesini jadi ngga? sekarang yak.</string>
    <string name="close">Tutup</string>
    <string name="check_sms_permission">Check SMS Permission</string>
    <string name="incoming_message">Incoming Message</string>
    <string name="from">from : %s</string>
    <string name="notification">notif</string>
    <string name="text_detail_activity">saya di detail activity</string>
    <string name="description_data">description data</string>
    <string name="detail">detail</string>
</resources>