<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_sms_receiver_app"
            android:layout_marginBottom="16dp" />
    <Button
            android:id="@+id/btn_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_sms_permission" />

    <Button
            android:id="@+id/btn_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_file" />
    <Button
            android:id="@+id/btn_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification" />
    <Button
            android:id="@+id/btn_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail" />
</LinearLayout>